# oracle-data-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  uni_udsc_state_v0.pkl
docs/: notes.txt
src/cmd/: block_from_date.py  convert_to_dataframe.py  example-config.yml  notes.txt  run_scanner.py  sample_commands.sh  uni-eth.yml  uni-usdc.yml
src/cmd/test/: uni-usdc-test-config.yml
src/cmd/tests/: reference_output.csv  test_config.yml  test_convert_to_dataframe.py
src/local_node/: block_cache.json  event_scanner.py  process_state_to_df.py  scanner_runner.py
test/local_node/: test_scanner_with_node.py
uni_eth_pair/: data-analysis.ipynb  uni_eth_price_delta_distribution.ipynb
uni_eth_pair/data/: 0xd3d2E2692501A5c9Ca623199D38826e513033a17_df.pkl  uni_eth_06132024.csv
uni_usdc_pair/: data-analysis.ipynb  uni_usdc_price_delta_distribution.ipynb
uni_usdc_pair/data/: uni_eth_06182024  uni_usdc_06132024,csv  uni_usdc_06182024.pkl
