[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = "analyze swaps in AMMs"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
gql = "3.5.0"
pandas = "1.5.3"
tabulate = "0.9.0"
web3 = "5.31.4"
tqdm = "4.66.4"
notebook = "6.4.13"
matplotlib = "3.7.5"
pip = "^22.3.1"
install = "1.3.5"
jupyterlab = "3.6.7"
ipympl = "0.9.3"
pyyaml = "6.0.1"
aiofiles = "22.1.0"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
aiosqlite = "0.20.0"
anyio = "4.4.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
babel = "2.15.0"
backcall = "0.2.0"
backoff = "2.2.1"
base58 = "2.1.1"
beautifulsoup4 = "4.12.3"
bitarray = "2.9.2"
bleach = "6.1.0"
certifi = "2024.6.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
comm = "0.2.2"
contourpy = "1.1.1"
cycler = "0.12.1"
cytoolz = "0.12.3"
debugpy = "1.8.1"
decorator = "5.1.1"
defusedxml = "0.7.1"
eth-abi = "2.2.0"
eth-account = "0.5.9"
eth-hash = "0.3.3"
eth-keyfile = "0.5.1"
eth-keys = "0.3.4"
eth-rlp = "0.2.1"
eth-typing = "2.3.0"
eth-utils = "1.10.0"
exceptiongroup = "1.2.1"
executing = "2.0.1"
fastjsonschema = "2.19.1"
fonttools = "4.53.0"
fqdn = "1.5.1"
frozenlist = "1.4.1"
googlesearch-python = "1.2.4"
graphql-core = "3.2.3"
hexbytes = "0.3.1"
idna = "3.7"
ipfshttpclient = "0.8.0a2"
ipykernel = "6.29.4"
ipython = "8.12.3"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.3"
isoduration = "20.11.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
json5 = "0.9.25"
jsonpointer = "3.0.0"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
jupyter-events = "0.10.0"
jupyter-ydoc = "0.2.5"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
jupyter-server = "2.14.1"
jupyter-server-fileid = "0.9.2"
jupyter-server-terminals = "0.5.3"
jupyter-server-ydoc = "0.8.0"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.27.2"
jupyterlab-widgets = "3.0.11"
kiwisolver = "1.4.5"
lru-dict = "1.3.0"
markupsafe = "2.1.5"
matplotlib-inline = "0.1.7"
mistune = "3.0.2"
multiaddr = "0.0.9"
multidict = "6.0.5"
nbclassic = "1.1.0"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
netaddr = "1.3.0"
notebook-shim = "0.2.4"
np = "1.0.2"
numpy = "1.26.4"
overrides = "7.7.0"
packaging = "24.1"
pandocfilters = "1.5.1"
parsimonious = "0.8.1"
parso = "0.8.4"
patsy = "0.5.6"
pexpect = "4.9.0"
pickleshare = "0.7.5"
pillow = "10.3.0"
platformdirs = "4.2.2"
plotly = "5.22.0"
plotly-express = "0.4.1"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.47"
protobuf = "3.19.5"
psutil = "5.9.8"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pycparser = "2.22"
pycryptodome = "3.20.0"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
python-json-logger = "2.0.7"
pytz = "2024.1"
pyzmq = "26.0.3"
referencing = "0.35.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rlp = "2.0.1"
rpds-py = "0.18.1"
scipy = "1.13.1"
send2trash = "1.8.3"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.5"
stack-data = "0.6.3"
statsmodels = "0.14.2"
tenacity = "8.3.0"
terminado = "0.18.1"
tinycss2 = "1.3.0"
tomli = "2.0.1"
toolz = "0.12.1"
tornado = "6.4.1"
traitlets = "5.14.3"
types-python-dateutil = "2.9.0.20240316"
typing-extensions = "4.12.2"
uri-template = "1.3.0"
urllib3 = "2.2.1"
varint = "1.0.2"
wcwidth = "0.2.13"
webcolors = "24.6.0"
webencodings = "0.5.1"
websocket-client = "1.8.0"
websockets = "9.1"
whois = "1.20240129.2"
widgetsnbextension = "4.0.11"
y-py = "0.6.2"
yarl = "1.9.4"
ypy-websocket = "0.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
